# EVA

./: .gitignore  LICENSE  MANIFEST.in  MANIFEST.md  PROMPT_EVA  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRAT.md  DEBT.md  JOURNAL.md  PROFILING.md  PROMPT DE BOOTSTRAP EVA.md  SECURITY_AUDIT.md
eva/: __init__.py  __main__.py  cli.py  config.yaml  repl.py
eva/agents/: __init__.py  agent_base.py
eva/api/: __init__.py  app.py  metrics.py  security.py  tls.py  users.py
eva/conversation/: __init__.py  conversation_engine.py
eva/core/: config_manager.py  eva_component.py  eva_engine.py  event_bus.py  logging_manager.py  version_manager.py
eva/data/memory/: conversation_2026-02-21.json  conversation_2026-02-22.json  conversation_2026-02-22_new.json  conversation_2026-02-23.json  conversation_2026-02-23_new.json  conversation_2026-02-24.json
eva/data/prompts/: custom.txt  system.txt  system_concise.txt  test_unresolved.txt
eva/llm/: llm_client.py
eva/llm/providers/: anthropic_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
eva/memory/: memory_manager.py
eva/plugins/: __init__.py  plugin_base.py  plugin_loader.py  plugin_registry.py
eva/prompt/: prompt_manager.py
eva/rag/: __init__.py  chunker.py  embeddings_provider.py  similarity_engine.py  storage.py  vector_memory.py
eva/tools/: __init__.py  decorator.py  demo_tools.py  tool_definition.py  tool_executor.py  tool_registry.py
eva/ui/: __init__.py  command_registry.py  commands.py
eva/ui/tui/: __init__.py  app.py  styles.tcss
eva/web/: __init__.py  app.py
plugins/: example_plugin.py
scripts/: eva_cli.py.old
tests/: conftest.py
tests/smoke/: test_smoke.py
tests/unit/: conftest.py  test_agent_base.py  test_anthropic_provider.py  test_api.py  test_boot_output.py  test_chunker.py  test_command_registry.py  test_config_manager.py  test_conftest.py  test_conversation_engine.py  test_conversation_tools.py  test_demo_tools.py  test_embeddings.py  test_eva_component.py  test_eva_engine.py  test_event_bus.py  test_gemini_provider.py  test_groq_provider.py  test_llm_client.py  test_logging_manager.py  test_memory_manager.py  test_memory_summary.py  test_metrics.py  test_network_guard.py  test_ollama_provider.py  test_openai_provider.py  test_plugin_loader.py  test_plugins.py  test_prompt_manager.py  test_rag_integration.py  test_secrets.py  test_similarity.py  test_storage.py  test_tls.py  test_tools.py  test_tui.py  test_users.py  test_vector_memory.py  test_version_manager.py  test_web.py
tools/: bench_api.py  profile_engine.py
