[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# ─── Stratégie de versioning (Phase 4) ──────────────────────────────────────
# Format  : MAJOR.MINOR.PATCH (PEP 440 strict)
# Convention :
#   MINOR = Phase complète     → 0.3.0 = P3, 0.4.0 = P4, ...
#   PATCH = correctif (hotfix) → 0.3.1, 0.3.2 = fixes P3
#   devN  = en cours           → 0.4.0.dev0, 0.4.0.dev1, ...
# Exemples :
#   0.3.0     = Phase 3 complète  ← version actuelle
#   0.3.1     = hotfix Phase 3
#   0.4.0.dev0 = début Phase 4
#   0.4.0     = Phase 4 complète
# Source unique : pyproject.toml → importlib.metadata → eva.__version__
# Future (Phase 5) : setuptools_scm (dériver depuis les tags git)
# Règle de bump : modifier UNIQUEMENT [project].version ici
# ────────────────────────────────────────────────────────────────────────────
name = "eva-assistant"
version = "0.3.0"
description = "Assistant IA personnel — propre, modulaire, maintenable"
readme = "README.md"
license = {file = "LICENSE"}
# Compatibilité : Python 3.9 (développé/testé) → 3.12 (compatible)
# CI teste : 3.9 (baseline) + 3.11 (LTS récent)
# 3.13+ non testée — exclue par précaution jusqu'à validation
requires-python = ">=3.9,<3.13"
authors = [
    {name = "Siridyx", email = "Siridyx@gmail.com"}
]
keywords = ["ai", "assistant", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ─── Dépendances core (minimales — REPL + config) ───────────────────────────
# Install minimal : pip install eva-assistant
# Uniquement le nécessaire pour `eva` (CLI + REPL conversationnel)
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

# ─── Extras : dépendances lourdes ou optionnelles ───────────────────────────
# Usage :
#   pip install -e ".[api]"           → API REST FastAPI
#   pip install -e ".[tui]"           → Terminal UI Textual
#   pip install -e ".[rag]"           → Mémoire vectorielle + embeddings
#   pip install -e ".[all]"           → tout
#   pip install -e ".[dev,api,tui,rag]"  → développement complet
[project.optional-dependencies]

# API REST (R-031) — fastapi[standard] inclut uvicorn + httpx + pydantic v2
api = [
    "fastapi[standard]>=0.104.0",
]

# Terminal UI (R-030) — Textual TUI framework
tui = [
    "textual>=0.65.0",
]

# RAG — embeddings + vectorisation (lourd : PyTorch + transformers)
rag = [
    "numpy>=1.24.0,<2.0.0",
    "sentence-transformers>=2.2.0",
]

# Tout (convenience)
all = [
    "eva-assistant[api,tui,rag]",
]

# Développement — tests + lint + formatage
# Ne pas inclure [api/tui/rag] ici : installer explicitement si besoin
# Pour CI complète : pip install -e ".[dev,api,tui,rag]"
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",          # TestClient API (test_api.py, test_web.py)
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
eva = "eva.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva*"]
exclude = ["tests*", "data*", "plugins*"]

[tool.setuptools.package-data]
# Fichiers de données inclus dans le package installé
eva = [
    "*.yaml",          # configs YAML
    "**/*.tcss",       # styles TUI Textual (R-030)
]
# eva/data/** est exclu : répertoire runtime (conversations, cache LLM)
# → non versionné (.gitignore), non packagé

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.pytest_cache
  | build
  | dist
  | data
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
filterwarnings = [
    "ignore::UserWarning:huggingface_hub",
]
markers = [
    "smoke: smoke tests (quick validation)",
    "unit: unit tests",
    "integration: integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
